Upgrade to gradle 4.7; change gradle docker plugin to bmuschko/gradle-docker-plugin; remove gradle.properties